# helixis

./: .env  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
apps/cplane/: Cargo.toml
apps/cplane/src/: handlers.rs  lib.rs  live_logs.rs  main.rs  storage.rs
apps/cplane/tests/: api_tests.rs
apps/executor/: Cargo.toml
apps/executor/src/: artifact_client.rs  client.rs  main.rs  output_store.rs  runtime.rs  sandbox.rs
crates/application/: Cargo.toml
crates/application/src/ports/: repositories.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/repositories/: artifact.rs  executor_repo.rs  mod.rs  payload.rs  rate_limit.rs  secret.rs  task.rs  task_repo.rs
crates/persistence/tests/: integration.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: api.rs
crates/runtime/core/: Cargo.toml
crates/runtime/core/src/: lib.rs
crates/runtime/node/: Cargo.toml
crates/runtime/node/src/: lib.rs
crates/runtime/python/: Cargo.toml
crates/runtime/python/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
demo/: main.py  run-demo.sh  seed.sql
docs/: IMPLEMENTATION.md  README.md  rfc-001-system-architecture.md  rfc-002-rust-codebase.md  rfc-003-implementation-plan.md  rfc-004-open-questions.md
examples/js-v8/: index.js
examples/python-ml/: main.py
examples/sh-bin/: main.sh
migrations/: 20260413182138_initial_setup.sql  20260414091500_rate_limits_and_secrets.sql  20260414153000_task_log_chunks.sql  20260414170000_artifact_upload_sessions.sql  20260414174500_payload_upload_sessions.sql
scripts/: fire_all.sh  seed_examples.sh
