[workspace]
resolver = "3"
members = [
    "apps/*",
    "crates/*",
    "xtask"
]

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "time"] }
tracing = "0.1"
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "2.0"
axum = "0.7"
serde_json = "1.0"
tracing-subscriber = "0.3"
object_store = { version = "0.11.1", features = ["aws"] }
bytes = "1.0"
