[package]
name = "cplane"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
domain = { path = "../../crates/domain" }
protocol = { path = "../../crates/protocol" }
application = { path = "../../crates/application" }
persistence = { path = "../../crates/persistence" }
dotenvy = "0.15"
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
telemetry = { path = "../../crates/telemetry" }
object_store = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
hyper = "1.0"
http-body-util = "0.1"
sqlx = { workspace = true }
dotenvy = "0.15"
