[package]
name = "persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
sqlx = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
dotenvy = "0.15"
